build/log/idf_py_stdout_output_3742
Command: ninja flash
[1/18] Performing build step for 'bootloader'
[1/1] cd /home/wyp/esp/stem_framework_idf61_lcd/build/bootloader/esp-idf/esptool_py && /home/wyp/.espressif/python_env/idf5.5_py3.10_env/bin/python /home/wyp/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /home/wyp/esp/stem_framework_idf61_lcd/build/bootloader/bootloader.bin
Bootloader binary size 0x5240 bytes. 0x2dc0 bytes (36%) free.
[2/18] No install step for 'bootloader'
[3/18] cd /home/wyp/esp/stem_framework_idf61_lcd/build && /home/wyp/.espressif/python_env/idf5.5_py3.10_env/bin/python /home/wyp/esp/esp-idf/components/spiffs/spiffsgen.py 0x1ee000 /home/wyp/esp/stem_framework_idf61_lcd/build/spiffs_payload /home/wyp/esp/stem_framework_idf61_lcd/build/spiffs.bin --page-size=256 --obj-name-len=32 --meta-len=4 --use-magic --use-magic-len
[4/18] Completed 'bootloader'
[5/18] Building C object esp-idf/comm_wifi/CMakeFiles/__idf_comm_wifi.dir/comm_wifi.c.obj
FAILED: esp-idf/comm_wifi/CMakeFiles/__idf_comm_wifi.dir/comm_wifi.c.obj 
/home/wyp/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20251107/xtensa-esp-elf/bin/xtensa-esp32s3-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.5.2-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/wyp/esp/stem_framework_idf61_lcd/build/config -I/home/wyp/esp/stem_framework_idf61_lcd/components/comm_wifi/include -I/home/wyp/esp/esp-idf/components/newlib/platform_include -I/home/wyp/esp/esp-idf/components/freertos/config/include -I/home/wyp/esp/esp-idf/components/freertos/config/include/freertos -I/home/wyp/esp/esp-idf/components/freertos/config/xtensa/include -I/home/wyp/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/wyp/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/wyp/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/wyp/esp/esp-idf/components/freertos/esp_additions/include -I/home/wyp/esp/esp-idf/components/esp_hw_support/include -I/home/wyp/esp/esp-idf/components/esp_hw_support/include/soc -I/home/wyp/esp/esp-idf/components/esp_hw_support/include/soc/esp32s3 -I/home/wyp/esp/esp-idf/components/esp_hw_support/dma/include -I/home/wyp/esp/esp-idf/components/esp_hw_support/ldo/include -I/home/wyp/esp/esp-idf/components/esp_hw_support/debug_probe/include -I/home/wyp/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -I/home/wyp/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -I/home/wyp/esp/esp-idf/components/esp_hw_support/power_supply/include -I/home/wyp/esp/esp-idf/components/esp_hw_support/port/esp32s3/. -I/home/wyp/esp/esp-idf/components/esp_hw_support/port/esp32s3/include -I/home/wyp/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/port/esp32s3/. -I/home/wyp/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/port/esp32s3/include -I/home/wyp/esp/esp-idf/components/heap/include -I/home/wyp/esp/esp-idf/components/heap/tlsf -I/home/wyp/esp/esp-idf/components/log/include -I/home/wyp/esp/esp-idf/components/soc/include -I/home/wyp/esp/esp-idf/components/soc/esp32s3 -I/home/wyp/esp/esp-idf/components/soc/esp32s3/include -I/home/wyp/esp/esp-idf/components/soc/esp32s3/register -I/home/wyp/esp/esp-idf/components/hal/platform_port/include -I/home/wyp/esp/esp-idf/components/hal/esp32s3/include -I/home/wyp/esp/esp-idf/components/hal/include -I/home/wyp/esp/esp-idf/components/esp_rom/include -I/home/wyp/esp/esp-idf/components/esp_rom/esp32s3/include -I/home/wyp/esp/esp-idf/components/esp_rom/esp32s3/include/esp32s3 -I/home/wyp/esp/esp-idf/components/esp_rom/esp32s3 -I/home/wyp/esp/esp-idf/components/esp_common/include -I/home/wyp/esp/esp-idf/components/esp_system/include -I/home/wyp/esp/esp-idf/components/esp_system/port/soc -I/home/wyp/esp/esp-idf/components/esp_system/port/include/private -I/home/wyp/esp/esp-idf/components/xtensa/esp32s3/include -I/home/wyp/esp/esp-idf/components/xtensa/include -I/home/wyp/esp/esp-idf/components/xtensa/deprecated_include -I/home/wyp/esp/esp-idf/components/lwip/include -I/home/wyp/esp/esp-idf/components/lwip/include/apps -I/home/wyp/esp/esp-idf/components/lwip/include/apps/sntp -I/home/wyp/esp/esp-idf/components/lwip/lwip/src/include -I/home/wyp/esp/esp-idf/components/lwip/port/include -I/home/wyp/esp/esp-idf/components/lwip/port/freertos/include -I/home/wyp/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/wyp/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/wyp/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/wyp/esp/esp-idf/components/esp_wifi/include -I/home/wyp/esp/esp-idf/components/esp_wifi/include/local -I/home/wyp/esp/esp-idf/components/esp_wifi/wifi_apps/include -I/home/wyp/esp/esp-idf/components/esp_wifi/wifi_apps/nan_app/include -I/home/wyp/esp/esp-idf/components/esp_event/include -I/home/wyp/esp/esp-idf/components/esp_phy/include -I/home/wyp/esp/esp-idf/components/esp_phy/esp32s3/include -I/home/wyp/esp/esp-idf/components/esp_netif/include -I/home/wyp/esp/esp-idf/components/nvs_flash/include -I/home/wyp/esp/esp-idf/components/esp_partition/include -mlongcalls  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/wyp/esp/stem_framework_idf61_lcd=. -fmacro-prefix-map=/home/wyp/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/comm_wifi/CMakeFiles/__idf_comm_wifi.dir/comm_wifi.c.obj -MF esp-idf/comm_wifi/CMakeFiles/__idf_comm_wifi.dir/comm_wifi.c.obj.d -o esp-idf/comm_wifi/CMakeFiles/__idf_comm_wifi.dir/comm_wifi.c.obj -c /home/wyp/esp/stem_framework_idf61_lcd/components/comm_wifi/comm_wifi.c
In file included from /home/wyp/esp/esp-idf/components/esp_hw_support/include/esp_intr_alloc.h:12,
                 from /home/wyp/esp/esp-idf/components/esp_hw_support/include/esp_cpu.h:21,
                 from /home/wyp/esp/esp-idf/components/esp_hw_support/include/spinlock.h:11,
                 from /home/wyp/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos/portmacro.h:49,
                 from /home/wyp/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include/freertos/portable.h:57,
                 from /home/wyp/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include/freertos/FreeRTOS.h:69,
                 from /home/wyp/esp/stem_framework_idf61_lcd/components/comm_wifi/comm_wifi.c:7:
/home/wyp/esp/stem_framework_idf61_lcd/components/comm_wifi/comm_wifi.c: In function 'comm_wifi_start':
/home/wyp/esp/stem_framework_idf61_lcd/components/comm_wifi/comm_wifi.c:217:21: error: implicit declaration of function 'esp_wifi_set_auto_connect'; did you mean 'esp_wifi_clear_fast_connect'? [-Wimplicit-function-declaration]
  217 |     ESP_ERROR_CHECK(esp_wifi_set_auto_connect(true));
      |                     ^~~~~~~~~~~~~~~~~~~~~~~~~
/home/wyp/esp/esp-idf/components/esp_common/include/esp_err.h:116:30: note: in definition of macro 'ESP_ERROR_CHECK'
  116 |         esp_err_t err_rc_ = (x);                                        \
      |                              ^
ninja: build stopped: subcommand failed.
